  RT #32843 - thanks to Slaven Rezic.

- improved the error messages displayed when headers and libraries
  can't be found
  http://rt.cpan.org/Ticket/Display.html?id=32856

- added --incpath and --libpath options to Makefile.PL and also look
  in $ENV{IM_INCPATH} and $ENV{IM_LIBPATH} like Imager.

- document the widget parameter
  https://rt.cpan.org/Ticket/Display.html?id=32855

0.005 12 Mar 2007
	- 0.005 release
	- added a TODO section to the POD
	- include NA in the die output from Makefile.PL if we can't
	  find supported GUI libraries/headers (RT #24486)
	- screenshot() no longer leaks image objects caused by the Imager
	  typemap bug (RT #24992)

0.004 23 Jan 2007
	- 0.004 release
	- add ppport.h for 5.005_03 support
	- t/30tkx11.t now provides a default gemoetry to prevent
	  a wait for window placement on window managers that do that
	  (like TWM - RT #24445)
	- set tags in the resulting image
	- remove an unused variable
	- add support for getting a subimage of the window
	- include the interface header in the implementations so we
	  get errors when they don't match (doh!)
	- return something from the X11 error handler
	- add X11/Xutil.h include for XDestroyImage()
	- handle the default (no id or hwnd) case correctly

0.003 12 Jan 2007
	- 0.003 release
	- ignore some VC++ generated junk in MANIFEST.SKIP
	- avoid some Makefile.PL warnings
	- use Imager in Makefile.PL since I'd prefer to error on that
	  rather than Imager::ExtUtils
	- work around Debian strangeness
	- the x11 capture wasn't releasing the XImage or the line
	  and color buffers.
	- x11_open() incorrectly reset the error handler to junk
	- Makefile.PL was checking /usr/X11R6 for headers instead of 
	  /usr/X11R6/include
	- add header directories as -I flags if we find a header in
	  them
	- avoid duplicate -L flags

0.002 2 Jan 2007
	Just packaging changes:
	- README was missing
	- updated my EU::MM and I now set the LICENSE key so it's set
	  in META.yml

0.001 1 Jan 2007