@@ -330,6 +330,12 @@ Cygwin/X I got the xterm window contents even when the Windows
 screensaver was running.  The root window captured appeared to be that
 generated by my window manager.
 
+Grabbing a window with other windows overlaying it will capture the
+content of those windows where they hide the window you want to
+capture.  You may want to raise the window to top.  This may be a
+security concern if the overlapping windows contain any sensitive
+information - true for any screen capture.
+
 =head1 LICENSE
 
 Imager::Screenshot is licensed under the same terms as Perl itself.
@@ -342,7 +348,9 @@ Future plans include:
 
 =item *
 
-OS X support - I need to find out which APIs to use to do this
+OS X support - I need to find out which APIs to use to do this.  I
+found some information on the APIs used for this, but don't have a Mac
+I can test on.
 
 =item *
 
